objects/kugo2p__ConfigurationGroup__c.object
<CustomObject>
    <description>Kugamon - Related object Additional Product Info that stores groups of Option Products used in Product Configurations for Quote and Orders.</description>
    <fields>
        <fullName>ProductFeatureId__c</fullName>
        <description>The CPQ Product Feature this record was created from</description>
        <externalId>true</externalId>
        <inlineHelpText>The CPQ Product Feature this record was created from</inlineHelpText>
        <label>ProductFeatureId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalProductInfo__c</fullName>
        <label>Additional Product Info</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipName>Configuration_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__Category__c</fullName>
        <description>Name of Section heading in Configurator. This Picklist is Editable.</description>
        <inlineHelpText>Name of Section heading in Configurator. This Picklist is Editable</inlineHelpText>
        <label>Category (editable)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Instructions__c</fullName>
        <description>Displays Configuration Group Instructions in Quote and Order Configurator page for Configured Products.</description>
        <inlineHelpText>Displays Configuration Group Instructions in Quote and Order Configurator page for Configured Products</inlineHelpText>
        <label>Instructions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__MaximumOption__c</fullName>
        <description>Maximum number of Option Products required to be selected. If blank, no Maximum Option required.</description>
        <inlineHelpText>Maximum number of Option Products required to be selected. If blank, no Maximum Option required</inlineHelpText>
        <label>Maximum Option</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__MinimumOption__c</fullName>
        <description>Sets the minimum Option Product value required to be selected in Quote and Order configurator page. Zero (0) value designates Option Products are Optional. One (1) or higher means Option Product selection is Required.</description>
        <inlineHelpText>Sets the minimum Option Product value required to be selected in Quote and Order configurator page. Zero (0) value designates Option Products are Optional. One (1) or higher means Option Product selection is Required</inlineHelpText>
        <label>Minimum Option</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__SortOrder__c</fullName>
        <description>Display Order within Category or Among other Configuration Groups, if Category is Blank.</description>
        <inlineHelpText>Display Order within Category or Among other Configuration Groups, if Category is Blank</inlineHelpText>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Configuration Group</label>
    <listViews>
        <fullName>kugo2p__All</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__AdditionalProductInfo__c</columns>
        <columns>kugo2p__Category__c</columns>
        <columns>kugo2p__MinimumOption__c</columns>
        <columns>kugo2p__MaximumOption__c</columns>
        <columns>kugo2p__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>